tests/negative/test_id_multi_children.orb
fnc main () () {
    sym (x 0);
    (\x 99);
};